--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "Social network for devs",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
+    "concurrently": "^7.6.0",
     "express": "^4.18.2",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^9.0.0",
